--- a/src/js/admin/settings/styles/scss/screens/features/_group-types.scss
+++ b/src/js/admin/settings/styles/scss/screens/features/_group-types.scss
@@ -5,7 +5,6 @@
 .bb-admin-group-types {
 	display: flex;
 	flex-direction: column;
-	gap: 24px;
 	max-width: 985px;
 	margin: 0 auto;
 	width: 100%;
